[tool.poetry]
name = "RL_electric"
version = "0.0.1"
authors = ["Felix Wick"]
description = "Reinforcement Learning to control the electric current through an RL load"

[tool.poetry.dependencies]
python = ">=3.10"
torch = {version = "1.13.0", source = "torch_cu116"}
numpy = "^1.26.4"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
ipython = "^8.27.0"

[[tool.poetry.source]]
name = "torch_cu116"
url = "https://download.pytorch.org/whl/cu116"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
